<resources>
  <string formatted="false" name="app_full_name">Battery Indicator Pro</string>
  <string formatted="false" name="pref_hint">Hint: Press MENU for help.</string>
  <string formatted="false" name="pref_cat_themes">Themes</string>
  <string formatted="false" name="pref_main_window_theme">Main Window Theme</string>
  <string formatted="false" name="pref_main_window_theme_help">
    Sets the theme for the main window.  By default, the theme will
    roughly match a standard Android dialog, like Battery Indicator
    always has.  The Full Window theme is useful if you like things
    big and easy to read.  Other themes are just for fun.
  </string>
  <string formatted="false" name="pref_cat_logging">Logging</string>
  <string formatted="false" name="pref_enable_logging">Enable Logging</string>
  <string formatted="false" name="pref_enable_logging_summary">Log battery state changes?</string>
  <string formatted="false" name="pref_enable_logging_help">
    If enabled, Battery Indicator will log battery state changes
    (e.g., the device is unplugged or becomes fully charged). You can
    view the logs from the main window (press MENU and then select
    Logs; on tablets, MENU isn\'t necessary).
  </string>
  <string formatted="false" name="pref_max_log_age">Maximum Log Age</string>
  <string formatted="false" name="pref_max_log_age_summary">Delete logs older than:</string>
  <string formatted="false" name="pref_max_log_age_help">
    If logging is enabled, then whenever you plug in your device, logs
    older than this will be deleted.
  </string>
  <string formatted="false" name="pref_cat_keyguard">Lock Screen / Keyguard</string>
  <string formatted="false" name="pref_cat_keyguard_help">
    Android allows apps to disable and reenable what it calls the
    \"keyguard\", which you probably think of as the lock screen.
    Beyond simply disabling and reenabling it, however, there is no
    more control — I can\'t control which keys turn the screen on, for
    example.
  </string>
  <string formatted="false" name="pref_confirm_manual_disable">Confirm Manual Disable</string>
  <string formatted="false" name="pref_confirm_manual_disable_help">
    If checked, a confirmation dialog will pop up when you try to
    manually disable the lock screen.  This is primarily intended to
    prevent new users from accidentally disabling their lock screen
    without knowing it.  If you disable the lock screen with any
    regularity, you\'ll probably want to turn this off.
  </string>
  <string formatted="false" name="pref_auto_disable">Auto-disable Lock Screen</string>
  <string formatted="false" name="pref_auto_disable_help">
    If checked, then whenever the device is plugged in, Battery
    Indicator with disable the lock screen, and whenever the device is
    unplugged, it will enable it again.\n

    \nNote that with this option enabled, you will still have to
    manually pass through the lock screen once before it will be
    auto-disabled.
  </string>
  <string formatted="false" name="pref_cat_temperature_unit">Temperature Unit</string>
  <string formatted="false" name="pref_convert_to_fahrenheit">Convert to Fahrenheit</string>
  <string formatted="false" name="pref_convert_to_fahrenheit_help">
    Android reports the battery temperature in degrees Celsius.  If
    you prefer to see the battery temperature in degrees Fahrenheit,
    check this option, and the app will convert for you.
  </string>
  <string formatted="false" name="pref_cat_autostart">Autostart</string>
  <string formatted="false" name="pref_autostart_at_boot">Autostart at Boot</string>
  <string formatted="false" name="pref_autostart_at_boot_summary">Start Battery Indicator when device boots:</string>
  <string formatted="false" name="pref_autostart_at_boot_help">
    Controls whether Battery Indicator should start itself
    automatically when the device boots up.\n

    \nThe \"If Running on Shutdown\" option works with regard to
    whether you\'ve most recently manually started or stopped Battery
    Indicator.  So if you kill Battery Indicator through some other
    means, like a task killer, then Battery Indicator doesn\'t know
    you stopped it, and it will still start at boot up if you have it
    set to this.
  </string>
  <string formatted="false" name="pref_cat_status_duration">Status Duration (For/Since...)</string>
  <string formatted="false" name="pref_status_dur_est">When to Approximate</string>
  <string formatted="false" name="pref_status_dur_est_help">
    Determines when the notification switches from saying, e.g.,
    \"Unplugged Since 1:10 PM\" to saying something like \"Unplugged
    for 1 Hour\".  The first way is more accurate, because it tells
    you exactly (to the minute) when the status changed, but many
    people prefer the simpler to comprehend approximation of the
    number of elapsed hours, so they make that happen sooner than the
    default of 12 hours.
  </string>
  <string formatted="false" name="pref_cat_time_remaining_estimates">Time Remaining Estimates</string>
  <string formatted="false" name="pref_show_charge_time">Show Charge Time</string>
  <string formatted="false" name="pref_show_charge_time_help">
    If enabled, then while the device is charging, the main window will
    show an estimate (based on your settings below) as to how long it will be
    until the device is fully charged.
  </string>
  <string formatted="false" name="pref_usb_charge_time">USB Charge</string>
  <string formatted="false" name="pref_usb_charge_time_help">
    Enter how long you think your battery would take to completely
    charge from 0% to 100% on USB power.
  </string>
  <string formatted="false" name="pref_ac_charge_time">AC Charge</string>
  <string formatted="false" name="pref_ac_charge_time_help">
    Enter how long you think your battery would take to completely
    charge from 0% to 100% on AC power.
  </string>
  <string formatted="false" name="pref_show_light_usage">Show Light Usage</string>
  <string formatted="false" name="pref_show_light_usage_help">
    Whether or not to show an estimate (in the main window) as to how
    long it will take to drain your battery at whatever you consider
    \"Light Usage\".
  </string>
  <string formatted="false" name="pref_light_usage_time">Light Usage</string>
  <string formatted="false" name="pref_light_usage_time_help">
    Enter how long you think your battery would take to completely
    discharge from 100% to 0% at whatever you consider \"Light Usage\".
  </string>
  <string formatted="false" name="pref_show_normal_usage">Show Normal Usage</string>
  <string formatted="false" name="pref_show_normal_usage_help">
    Whether or not to show an estimate (in the main window) as to how
    long it will take to drain your battery at whatever you consider
    \"Normal Usage\".
  </string>
  <string formatted="false" name="pref_normal_usage_time">Normal Usage</string>
  <string formatted="false" name="pref_normal_usage_time_help">
    Enter how long you think your battery would take to completely
    discharge from 100% to 0% at whatever you consider \"Normal Usage\".
  </string>
  <string formatted="false" name="pref_show_heavy_usage">Show Heavy Usage</string>
  <string formatted="false" name="pref_show_heavy_usage_help">
    Whether or not to show an estimate (in the main window) as to how
    long it will take to drain your battery at whatever you consider
    \"Heavy Usage\".
  </string>
  <string formatted="false" name="pref_heavy_usage_time">Heavy Usage</string>
  <string formatted="false" name="pref_heavy_usage_time_help">
    Enter how long you think your battery would take to completely
    discharge from 100% to 0% at whatever you consider \"Heavy Usage\".
  </string>
  <string formatted="false" name="pref_show_constant_usage">Show Constant Usage</string>
  <string formatted="false" name="pref_show_constant_usage_help">
    Whether or not to show an estimate (in the main window) as to how
    long it will take to drain your battery at whatever you consider
    \"Constant Usage\".
  </string>
  <string formatted="false" name="pref_constant_usage_time">Constant Usage</string>
  <string formatted="false" name="pref_constant_usage_time_help">
    Enter how long you think your battery would take to completely
    discharge from 100% to 0% at whatever you consider \"Constant Usage\".
  </string>
  <string formatted="false" name="pref_cat_color">Icon Color</string>
  <string formatted="false" name="pref_cat_color_help">
    In order to keep the binary package for Battery Indicator
    reasonably small, there are some limitations for the colors.  At
    the time of writing, you can have a red icon as high as 30%, an
    amber icon as high as 50%, and a green icon as low as 20%.  I
    think these are reasonable compromises that should work for 99% of
    users.\n

    \nTo give you maximum control, the colors can be turned on or off
    independently.  This means that you can have as much as a
    four-tiered color scheme, where the icon is green when it is very
    full, then grayscale, then amber, then red.  Of course, most
    people probably have the amber and green thresholds set to the
    same value, so that the icon is never grayscale.
  </string>
  <string formatted="false" name="pref_color_preview">Color Preview</string>
  <string formatted="false" name="pref_color_preview_help">
    The color preview will hopefully make it really easy to visualize
    what effect your color settings will have.\n

    \nThis doesn\'t exist in 10% mode, because it just wouldn\'t make
    sense.
  </string>
  <string formatted="false" name="pref_red">Use Red Icon</string>
  <string formatted="false" name="pref_red_help">
    Whether or not to use a red icon below the specified threshold.
  </string>
  <string formatted="false" name="pref_red_thresh">Red Threshold</string>
  <string formatted="false" name="pref_red_thresh_help">Specifies the charge level which
    the icon should turn red below (or <i>at</i>, in 10% Mode).\n

    \nThe options for the red threshold include all the values (in
    multiples of 5) for which there are red icons available.\n

    \nIn 10% Mode, things work slightly differently but should be
    self-explanatory.
  </string>
  <string formatted="false" name="pref_amber">Use Amber Icon</string>
  <string formatted="false" name="pref_amber_help">
    Whether or not to use an amber icon below the specified threshold.
  </string>
  <string formatted="false" name="pref_amber_thresh">Amber Threshold</string>
  <string formatted="false" name="pref_amber_thresh_help">Specifies the charge level
    which the icon should turn amber below (or <i>at</i>, in 10%
    Mode).\n

    \nThe options for the amber threshold include all the values (in
    multiples of 5) for which there are amber icons available,
    starting 5 percentage points above the red threshold (if there is
    one).  For example, if you have the red threshold set to 15, then
    your lowest option here will be 20.\n

    \nIn 10% Mode, things work slightly differently but should be
    self-explanatory.
  </string>
  <string formatted="false" name="pref_green">Use Green Icon</string>
  <string formatted="false" name="pref_green_help">
    Whether or not to use a green icon at or above the specified threshold.
  </string>
  <string formatted="false" name="pref_green_thresh">Green Threshold</string>
  <string formatted="false" name="pref_green_thresh_help">Specifies the charge level
    which the icon should be green at or above.\n

    \nThe options for the green threshold include all the values (in
    multiples of 5) for which there are green icons available,
    starting at the highest active threshold you have set for red or
    amber.  For example, if you have the amber threshold set to 40,
    then your lowest option here will be 40.\n

    \nIn 10% Mode, things work slightly differently but should be
    self-explanatory.
  </string>
</resources>