<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:paddingTop="12sp"
                android:paddingBottom="12sp"
                android:paddingLeft="12sp"
                android:paddingRight="12sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
  >
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_logging" />
    <TextView style="@style/help_pref" android:text="@string/pref_enable_logging" />
    <TextView style="@style/help_text" android:text="@string/pref_enable_logging_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_view_logs" />
    <TextView style="@style/help_text" android:text="@string/pref_view_logs_help" />

    <View style="@style/help_cat_pre_margin" />
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_keyguard" />
    <View style="@style/help_cat_post_margin" />
    <TextView style="@style/help_text" android:text="@string/pref_cat_keyguard_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_confirm_manual_disable" />
    <TextView style="@style/help_text" android:text="@string/pref_confirm_manual_disable_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_auto_disable" />
    <TextView style="@style/help_text" android:text="@string/pref_auto_disable_help" />

    <View style="@style/help_cat_pre_margin" />
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_temperature_unit" />
    <TextView style="@style/help_pref" android:text="@string/pref_convert_to_fahrenheit" />
    <TextView style="@style/help_text" android:text="@string/pref_convert_to_fahrenheit_help" />

    <View style="@style/help_cat_pre_margin" />
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_autostart" />
    <TextView style="@style/help_pref" android:text="@string/pref_autostart_at_boot" />
    <TextView style="@style/help_text" android:text="@string/pref_autostart_at_boot_help" />

    <View style="@style/help_cat_pre_margin" />
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_status_duration" />
    <TextView style="@style/help_pref" android:text="@string/pref_status_dur_est" />
    <TextView style="@style/help_text" android:text="@string/pref_status_dur_est_help" />

    <View style="@style/help_cat_pre_margin" />
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_color" />
    <View style="@style/help_cat_post_margin" />
    <TextView style="@style/help_text" android:text="@string/pref_cat_color_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_color_preview" />
    <TextView style="@style/help_text" android:text="@string/pref_color_preview_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_red" />
    <TextView style="@style/help_text" android:text="@string/pref_red_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_red_thresh" />
    <TextView style="@style/help_text" android:text="@string/pref_red_thresh_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_amber" />
    <TextView style="@style/help_text" android:text="@string/pref_amber_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_amber_thresh" />
    <TextView style="@style/help_text" android:text="@string/pref_amber_thresh_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_green" />
    <TextView style="@style/help_text" android:text="@string/pref_green_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_green_thresh" />
    <TextView style="@style/help_text" android:text="@string/pref_green_thresh_help" />
  </LinearLayout>
</ScrollView>
