<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
  >
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_status_duration" />
    <View style="@style/help_cat_post_margin" />
    <TextView style="@style/help_pref" android:text="@string/pref_status_dur_est" />
    <TextView style="@style/help_text" android:text="@string/pref_status_dur_est_help" />

    <View style="@style/help_cat_pre_margin" />
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_time_remaining_estimates" />
    <View style="@style/help_cat_post_margin" />
    <TextView style="@style/help_pref" android:text="@string/pref_show_charge_time" />
    <TextView style="@style/help_text" android:text="@string/pref_show_charge_time_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_usb_charge_time" />
    <TextView style="@style/help_text" android:text="@string/pref_usb_charge_time_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_ac_charge_time" />
    <TextView style="@style/help_text" android:text="@string/pref_ac_charge_time_help" />

    <TextView style="@style/help_pref" android:text="@string/pref_show_light_usage" />
    <TextView style="@style/help_text" android:text="@string/pref_show_light_usage_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_light_usage_time" />
    <TextView style="@style/help_text" android:text="@string/pref_light_usage_time_help" />

    <TextView style="@style/help_pref" android:text="@string/pref_show_normal_usage" />
    <TextView style="@style/help_text" android:text="@string/pref_show_normal_usage_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_normal_usage_time" />
    <TextView style="@style/help_text" android:text="@string/pref_normal_usage_time_help" />

    <TextView style="@style/help_pref" android:text="@string/pref_show_heavy_usage" />
    <TextView style="@style/help_text" android:text="@string/pref_show_heavy_usage_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_heavy_usage_time" />
    <TextView style="@style/help_text" android:text="@string/pref_heavy_usage_time_help" />

    <TextView style="@style/help_pref" android:text="@string/pref_show_constant_usage" />
    <TextView style="@style/help_text" android:text="@string/pref_show_constant_usage_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_constant_usage_time" />
    <TextView style="@style/help_text" android:text="@string/pref_constant_usage_time_help" />

  </LinearLayout>
</ScrollView>
