<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
>
  <LinearLayout android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
  >
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_themes" />
    <View style="@style/help_cat_post_margin" />
    <TextView style="@style/help_pref" android:text="@string/pref_main_window_theme" />
    <TextView style="@style/help_text" android:text="@string/pref_main_window_theme_help" />

    <View style="@style/help_cat_pre_margin" />
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_color" />
    <TextView style="@style/help_text" android:text="@string/pref_cat_color_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_color_preview" />
    <TextView style="@style/help_text" android:text="@string/pref_color_preview_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_red" />
    <TextView style="@style/help_text" android:text="@string/pref_red_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_red_thresh" />
    <TextView style="@style/help_text" android:text="@string/pref_red_thresh_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_amber" />
    <TextView style="@style/help_text" android:text="@string/pref_amber_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_amber_thresh" />
    <TextView style="@style/help_text" android:text="@string/pref_amber_thresh_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_green" />
    <TextView style="@style/help_text" android:text="@string/pref_green_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_green_thresh" />
    <TextView style="@style/help_text" android:text="@string/pref_green_thresh_help" />
  </LinearLayout>
</ScrollView>
