<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
>
  <LinearLayout style="@style/help_ll" android:orientation="vertical">
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_logging" />
    <View style="@style/help_cat_post_margin" />
    <TextView style="@style/help_pref" android:text="@string/pref_enable_logging" />
    <TextView style="@style/help_text" android:text="@string/pref_enable_logging_help" />
    <TextView style="@style/help_pref" android:text="@string/pref_max_log_age" />
    <TextView style="@style/help_text" android:text="@string/pref_max_log_age_help" />

    <View style="@style/help_cat_pre_margin" />
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_temperature_unit" />
    <View style="@style/help_cat_post_margin" />
    <TextView style="@style/help_pref" android:text="@string/pref_convert_to_fahrenheit" />
    <TextView style="@style/help_text" android:text="@string/pref_convert_to_fahrenheit_help" />

    <View style="@style/help_cat_pre_margin" />
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_autostart" />
    <View style="@style/help_cat_post_margin" />
    <TextView style="@style/help_pref" android:text="@string/pref_autostart_at_boot" />
    <TextView style="@style/help_text" android:text="@string/pref_autostart_at_boot_help" />

    <View style="@style/help_cat_pre_margin" />
    <TextView style="@style/help_cat"  android:text="@string/pref_cat_predictor" />
    <View style="@style/help_cat_post_margin" />
    <TextView style="@style/help_pref" android:text="@string/pref_prediction_type" />
    <TextView style="@style/help_text" android:text="@string/pref_prediction_type_help" />
</LinearLayout>
</ScrollView>
