<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <Preference
     android:title="@string/pref_hint"
     android:layout="@layout/hint"
     android:enabled="false"
     android:selectable="false"
  />

  <PreferenceCategory android:title="@string/pref_cat_logging">
    <CheckBoxPreference
       android:key="enable_logging"
       android:title="@string/pref_enable_logging"
       android:summary="@string/pref_enable_logging_summary"
       android:defaultValue="true"
    />

    <ListPreference
       android:key="max_log_age"
       android:title="@string/pref_max_log_age"
       android:entries="@array/max_log_age_entries"
       android:entryValues="@array/max_log_age_values"
       android:dialogTitle="@string/pref_max_log_age_summary"
       android:defaultValue="@string/default_max_log_age"
    />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_cat_temperature_unit">
    <CheckBoxPreference
       android:key="convert_to_fahrenheit"
       android:title="@string/pref_convert_to_fahrenheit"
       android:defaultValue="@bool/default_convert_to_fahrenheit"
    />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_cat_autostart">
    <ListPreference
       android:key="autostart"
       android:title="@string/pref_autostart_at_boot"
       android:entries="@array/boot_pref_entries"
       android:entryValues="@array/boot_pref_values"
       android:dialogTitle="@string/pref_autostart_at_boot_summary"
       android:defaultValue="auto"
    />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_cat_predictor">
    <ListPreference
       android:key="prediction_type"
       android:title="@string/pref_prediction_type"
       android:entries="@array/prediction_type_entries"
       android:entryValues="@array/prediction_type_values"
       android:defaultValue="@string/default_prediction_type"
    />
  </PreferenceCategory>

  <!--PreferenceCategory android:title="@string/pref_cat_language">
    <ListPreference
       android:key="language_override"
       android:title="@string/pref_language_override"
       android:entryValues="@array/lang_values"
       android:dialogTitle="@string/pref_language_override_summary"
       android:defaultValue="default"
    />
  </PreferenceCategory-->
</PreferenceScreen>
